--- a/index.css
+++ b/index.css
@@ -3,9 +3,10 @@
 	--gray-mid-lo: #616161;
 	--gray-mid-hi: #9D9D9D;
 	--gray-hi: #D9D9D9;
+	--gray-modal: rgba(255, 255, 255, 0.3);
 	
 	--rule-weight: 0.08em;
-	--rule-color-dark: rgba(217, 217, 217, 0.3);
+	--rule-color-dark: rgba(255, 255, 255, 0.15);
 }
 
 body {
@@ -15,88 +16,94 @@ body {
 	-webkit-font-size-adjust: none;
 	font-size: 10pt;
 	margin: 0;
-	padding: 4em 0 0 0;
+	padding-top: 4.85em;
 }
-
-/*
-@media screen and (min-width: 1200px) {
-	body {
-		font-size: 11pt;
-	}
-}
-*/
 
 .content {
-	width: 70em;
+	width: 71em;
 	max-width: 100%;
 	margin: auto;
+	padding: 0 2em;
 }
 
-.elements {
-	margin: 0 1em;
+.light-select:hover {
+	background-color: rgba(37, 37, 37, 0.075);
+	border-radius: 0.31em;
+}
+
+.dark-select:hover {
+	background-color: rgba(217, 217, 217, 0.075);
+	border-radius: 0.31em;
 }
 
 .nav {
-	position: fixed;
-	top: 0;
-	width: 100%;
-	-webkit-backdrop-filter: blur(0.6em);
-	backdrop-filter: blur(0.6em);
-}
-
-#nav-condensed {
-	color: var(--gray-lo);
-	background-color: rgba(255, 255, 255, 0.8);
-}
-
-#nav-expanded {
-	display: none;
-	opacity: 0;
-	height: 100%;
-	color: #FFF;
-	background-color: rgba(37, 41, 55, 0.8);
-}
-
-.nav-bar {
 	width: 100%;
 	height: 3em;
 }
 
-#nav-bar-light {
+#main-nav {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	background-color: rgba(255, 255, 255, 0.8);
+	-webkit-backdrop-filter: blur(0.4em);
+	backdrop-filter: blur(0.4em);
 	border-bottom: var(--rule-weight) solid var(--gray-hi);
+	z-index: 998;
 }
 
-#nav-bar-dark {
+#modal {
+	display: none;
+	opacity: 0;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	color: #FFF;
+	background-color: rgba(1, 2, 3, 0.9);
+	-webkit-backdrop-filter: blur(0.4em);
+	backdrop-filter: blur(0.4em);
+	z-index: 999;
+}
+
+#modal-nav {
 	border-bottom: var(--rule-weight) solid var(--rule-color-dark);
 }
 
-#site-title {
+#modal-content {
 	position: relative;
-	top: 1.167em;
-	font-weight: bold;
+	top: 100%;
+	height: calc(100% - 3em);
+	overflow: scroll;
+}
+
+.site-path-block {
+	display: inline-block;
+	position: relative;
+	top: 0.38em;
+	height: 2.24em;
+	padding: 0 0.5em;
+	margin-left: -0.5em;
+}
+
+.site-title {
 	font-size: 1.333em;
-	line-height: 0;
-	margin-top: 0;
+	font-weight: bold;
+	line-height: 1.68em;
+	letter-spacing: -0.01em;
 }
 
-.light-select:hover {
-	background-color: rgba(37, 37, 37, 0.1);
+.site-section {
+	font-size: 1.27em;
+	letter-spacing: 0.01em;
 }
 
-.dark-select:hover {
-	background-color: rgba(217, 217, 217, 0.12);
+#site-section-light {
+	color: var(--gray-mid-hi);
 }
 
-#menu-icon-img {
-	display: block;
-	height: 1em;
-	margin: 0.62em auto;
-}
-
-#exit-icon-img {
-	display: block;
-	height: 1.259em;
-	margin: 0.49em auto;
+#site-section-dark {
+	color: var(--gray-modal);
 }
 
 .nav-icon-select {
@@ -105,68 +112,50 @@ body {
 	top: 0.38em;
 	width: 2.24em;
 	height: 2.24em;
-	border-radius: 0.31em;
 	margin-right: -0.31em;
 }
 
+.menu-icon-img {
+	display: block;
+	height: 1em;
+	margin: 0.62em auto;
+}
+
+.exit-icon-img {
+	display: block;
+	height: 1.259em;
+	margin: 0.49em auto;
+}
+
 #menu {
-/*	display: none;*/
-	font-size: 1em;
 	line-height: 0;
 }
 
 .menu-item {
 	height: 3em;
-	margin: 0;
 	border-bottom: var(--rule-weight) solid var(--rule-color-dark);
 }
 
-/*
-.sub-menu {
-	display: none;
-}
-
-.sub-menu-item {
-	height: 2.24em;
-	margin-left: 1.24em;
-}
-*/
-
 .menu-item-select {
+	display: block;
 	position: relative;
-	top: 50%;
-	transform: translateY(-50%);
+	top: 0.38em;
 	width: calc(100% + 0.62em);
 	height: 1.12em;
 	margin-left: -0.62em;
 	padding: 1.12em 0 0 0.62em;
-	border-radius: 0.31em;
 }
 
-/*
-.sub-menu-item-select {
-	position: relative;
-	top: 50%;
-	transform: translateY(-50%);
-	width: calc(100% + 0.62em);
-	height: 0.9em;
-	margin-left: -0.62em;
-	padding: 0.9em 0 0 0.62em;
-	border-radius: 0.31em;
-}
-*/
-
-#memo {
-/*	display: none;*/
+#credits {
 	position: absolute;
 	bottom: 0.62em;
 	width: 100%;
+	color: var(--gray-modal);
 	line-height: 0;
 	letter-spacing: 0.12em;
-	color: rgba(255, 255, 255, 0.4);
 }
 
-#memo-elements {
+#credits-elements {
 	padding-top: 0.2em;
 	border-top: 0.04em solid var(--rule-color-dark);
 }
@@ -181,6 +170,114 @@ body {
 	font-size: 0.6em;
 }
 
+.gallery {
+	width: calc(100% + 1em);
+	margin: -0.5em -0.5em;
+}
+
+.gallery-item-container {
+	display: inline-block;
+	margin-bottom: 1em;
+}
+
+.gallery-item-select {
+	width: 18em;
+	height: 22.25em;
+}
+
+.gallery-item {
+	position: relative;
+	top: 0.5em;
+	left: 0.5em;
+	width: 17em;
+	height: 21em;
+	line-height: 0.5;
+}
+
+.gallery-image {
+	width: 17em;
+	height: 17em;
+	margin-bottom: 0.25em;
+}
+
+.gallery-label {
+	font-weight: bold;
+	font-size: 1.1em;
+	color: var(--gray-lo);
+}
+
+.gallery-sublabel {
+	font-size: 1.1em;
+	color: var(--gray-mid-hi);
+}
+
+.article {
+	color: var(--gray-lo);
+	background-color: #FFF;
+	margin: 1.85em 0;
+	padding: 4.85em 0;
+	border-radius: 0.5em;
+}
+
+.article-association {
+	float: left;
+	font-weight: bold;
+	margin: 0;
+}
+
+.article-date {
+	float: right;
+	font-weight: bold;
+	margin: 0;
+}
+
+.article-spacer {
+	margin-bottom: 4.85em;
+}
+
+.article-text {
+	width: 62%;
+	margin: 0 auto;
+}
+
+.title {
+	font-weight: bold;
+	font-size: 3em;
+	line-height: 1.2em;
+	color: var(--gray-lo);
+	letter-spacing: -0.02em;
+	margin: 0.4em auto;
+}
+
+.heading {
+	font-weight: bold;
+	font-size: 2em;
+	line-height: 1.2em;
+	color: var(--gray-lo);
+	margin-top: 1.5em;
+	margin-bottom: 0.75em;
+}
+
+.body {
+	font-size: 1.5em;
+	line-height: 1.4em;
+	color: var(--gray-mid-lo);
+	text-align: justify;
+	margin-bottom: 1.5em;
+}
+
+.caption {
+	line-height: 1.4em;
+	color: var(--gray-mid-lo);
+	margin-top: 1em;
+	margin-bottom: 3em;
+}
+
+.hr {
+	border-top: var(--rule-weight) solid var(--gray-hi);
+	margin: 0.7em auto;
+}
+
 #artwork {
 	display: block;
 	height: calc(100vh - 3em);
@@ -189,11 +286,68 @@ body {
 	margin: 3em auto 0 auto;
 }
 
-.content-image {
-	width: 100%;
+.article-image {
+	width: calc(100% - 4em);
+	margin: 3em 2em 0 2em;
 }
 
 a:any-link {
 	color: inherit;
 	text-decoration: none;
+}
+
+@media screen and (min-width: 1200pt) {
+	body {
+		font-size: 11pt;
+	}
+}
+
+@media screen and (min-width: 1600pt) {
+	body {
+		font-size: 12pt;
+	}
+}
+
+@media screen and (max-width: 750pt) {  /* 750pt = (71em + 4em) * 10pt */
+	.content {
+		width: 53em;
+	}
+	
+	.article-text {
+		width: 83%;
+	}
+}
+
+@media screen and (max-width: 570pt) {  /* 570pt = (53em + 4em) * 10pt */
+	.content {
+		width: 35em;
+	}
+	
+	#article-content {
+		width: 100%;
+		background-color: #FFF;
+		padding: 0;
+	}
+	
+	.article {
+		width: 35em;
+		border-radius: 0;
+		margin: 0 auto;
+		padding: 1.5em 0;
+	}
+	
+	.article-text {
+		width: inherit;
+	}
+	
+	.article-image {
+		width: 100%;
+		margin: 3em 0 0 0;
+	}
+}
+
+@media screen and (max-width: 390pt) {  /* 390pt = (35em + 4em) * 10pt */
+	body {
+		font-size: 2.564vw;
+	}
 }
