--- a/global/components/main-nav.html
+++ b/global/components/main-nav.html
@@ -4,7 +4,7 @@
 			<div class='site-title'>Brady Hartog</div>
 		</a>
 		<div class='site-path-block'>
-			<div class='site-section' id='site-section-light'></div>
+			<div class='site-section' id='site-section-light'>&nbsp;</div>
 		</div>
 		<div class='light-select nav-icon-select' onclick='showModal("/global/components/menu-credits.html")'>
 			<img class='menu-icon-img' src='/global/icons/menu-gray-lo.svg'>
