--- a/global/components/modal.html
+++ b/global/components/modal.html
@@ -5,7 +5,7 @@
 				<div class='site-title'>Brady Hartog</div>
 			</a>
 			<div class='site-path-block'>
-				<div class='site-section' id='site-section-dark'></div>
+				<div class='site-section' id='site-section-dark'>&nbsp;</div>
 			</div>
 			<div class='dark-select nav-icon-select' onclick='hideModal()'>
 				<img class='exit-icon-img' src='/global/icons/exit-white.svg'>
