Pushing new content.

--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ body {
 	-moz-font-size-adjust: none;
 	-webkit-font-size-adjust: none;
 	font-size: 10pt;
+/*	background-color: #F7F7F7;*/
 	margin: 0;
 	padding-top: 4.85em;
 }
