--- a/index.css
+++ b/index.css
@@ -128,7 +128,7 @@ body {
   }
 }
 
-@media screen and (max-width: 380pt) {  /* 380pt = ((36em content) + (2em padding)) * 10pt */
+@media screen and (max-aspect-ratio: 3/4), (max-width: 380pt) {  /* 380pt = ((36em content) + (2em padding)) * 10pt */
   body {
     font-size: 2.631vw; /* 2-column mobile mode */
   }
