--- a/index.css
+++ b/index.css
@@ -130,6 +130,10 @@ body {
 
 @media screen and (max-aspect-ratio: 3/4), (max-width: 380pt) {  /* 380pt = ((36em content) + (2em padding)) * 10pt */
   body {
-    font-size: 2.631vw; /* 2-column mobile mode */
+    font-size: 2.631vw; /* mobile mode */
+  }
+
+  .content {
+    width: 36em; /* 2 columns */
   }
 }
