--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,8 @@ body {
   font-weight: bold;
   line-height: 1.25em;
   letter-spacing: -0.02em;
-  color: #000000;
+  background-color: #000000;
+  color: #e6e6e6;
   margin: 0;
 }
 
@@ -60,13 +61,13 @@ td {
   width: 2.5em;
   height: 2.5em;
   text-align: center;
-  background-color: #f0f0f0;
+  background-color: #1a1a1a;
   border-radius: 50%;
   margin: 0 1.125em -0.625em -0.625em;
 }
 
 .social-selector:hover {
-  background-color: #e0e0e0;
+  background-color: #343434;
 }
 
 .social-icon {
