--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
   line-height: 1.25em;
   letter-spacing: -0.02em;
   background-color: #000000;
-  color: #e6e6e6;
+  color: #E6E6E6;
   margin: 0;
 }
 
@@ -61,7 +61,7 @@ td {
   width: 2.5em;
   height: 2.5em;
   text-align: center;
-  background-color: #1a1a1a;
+  background-color: #1A1A1A;
   border-radius: 50%;
   margin: 0 1.125em -0.625em -0.625em;
 }
@@ -78,4 +78,9 @@ td {
 #linkedin {
   height: calc(1.25em * 0.95);
   margin-top: calc(0.625em + 1.25em * 0.025);
+}
+
+#mail {
+  height: calc(1.25em * 0.7);
+  margin-top: calc(0.625em + 1.25em * 0.15);
 }
